--- a/busybus5css.css
+++ b/busybus5css.css
@@ -16,6 +16,8 @@ body {
 
 /* Nav Styles */
 
+/*iOS status bar*/
+
 .nav {
   background-image: url(ios-status-bar.png);
   background-repeat: no-repeat;
@@ -26,21 +28,13 @@ body {
   width: 375px;
 }
 
+/*back arrow*/
+
 .left-arrow {
   background-image: url(arrow-left.png);
   background-repeat: no-repeat;
   float: left;
   width: 10%;
-  height: 30px;
-  margin-top: 20px;
-}
-
-.icon {
-  background-image: url(busy-bus-icon-2.png);
-  background-repeat: no-repeat;
-  margin-left: 30px;
-  float: left;
-  width: 15%;
   height: 30px;
   margin-top: 20px;
 }
