--- a/busybus5css.css
+++ b/busybus5css.css
@@ -16,8 +16,6 @@ body {
 
 /* Nav Styles */
 
-/*iOS status bar*/
-
 .nav {
   background-image: url(ios-status-bar.png);
   background-repeat: no-repeat;
@@ -28,8 +26,6 @@ body {
   width: 375px;
 }
 
-/*back arrow*/
-
 .left-arrow {
   background-image: url(arrow-left.png);
   background-repeat: no-repeat;
@@ -38,6 +34,7 @@ body {
   height: 30px;
   margin-top: 20px;
 }
+
 
 .nav h1 {
   font-size: 2.0em;
@@ -108,6 +105,7 @@ h2.red {
   margin-right: 40px;
   margin-top: 5px;
   padding-left: 4px;
+  white-space: nowrap;
 }
 
 p.direction {
@@ -157,9 +155,10 @@ p.direction {
   font-size: 1.4em;
   font-weight: bold;
   margin-right: 2px;
-  margin-top: 18px;
+  margin-top: 32px;
   padding-left: 4px;
   font-family: "sf pro display", sans-serif;
+  vertical-align: baseline;
 }
 
 .borange {
