--- a/busybus5css.css
+++ b/busybus5css.css
@@ -35,6 +35,11 @@ body {
   margin-top: 20px;
 }
 
+.left-arrow h4 {
+  font-size:1.4em;
+  font-family: "sf pro display", sans-serif;
+  color: #ffffff;
+  margin-left: 22px;
 
 .nav h1 {
   font-size: 2.0em;
